# evidence-loop-visibility-engine

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LOOPS.md  MANIFEST.in  Makefile  README.md  ROADMAP.md  SECURITY.md  action.yml  llms.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: architecture.md  connector-contract.md  github-action.md  loop-engineering.md  open-core-boundary.md  public-claims.md  quickstart.md  releasing.md  security.md  visibility-domains.md
examples/: all-domains.json  connector-envelope-second.json  connector-envelope.json  contained-site-failure.json
scripts/: artifact_manifest.py  artifact_smoke.py  validate_public_release.py  verify_release.py
src/evidence_loop/: __init__.py  action_runner.py  capabilities.py  cli.py  engine.py  errors.py  normalizer.py  schema.py
src/evidence_loop/resources/: __init__.py  all-domains.json  benchmark.json  clean-no-op.json  contained-site-failure.json  normal.json
tests/: test_action.py  test_cli_and_release.py  test_engine.py  test_normalizer.py  test_schema.py
